[tool.poetry]
name = "sshtools"
version = "3.1.2"
description = ""
authors = ["Tim Mees <tim.mees83@gmail.com>"]
homepage = "https://github.com/tim83/sshtools"
repository = "https://github.com/tim83/sshtools"
include = [
    'sshtools/config/**',
]

[tool.poetry.scripts]
getip = "sshtools.getip:run"
smount = "sshtools.smount:run"
sshin = "sshtools.sshin:run"
ssync = "sshtools.ssync:run"
wake-up = "sshtools.wakeup:run"
ssh-forget = "sshtools.forget:run"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
DateTime = "^4.3"
argparse = "^1.4.0"
configparser = "^5.0.2"
psutil = "^5.8.0"
timtools = {git = "https://github.com/tim83/timtools"}
ipaddress = "^1.0.23"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-bugbear = "^21.9.2"
pep8-naming = "^0.12.1"
black = "^21.10b0"
isort = "^5.10.1"
safety = "^1.10.3"
bandit = "^1.7.1"
pre-commit = "^2.15.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
