[tool.poetry]
name = "sshtools"
version = "4.7.0"
description = ""
authors = ["Tim Mees <tim.mees83@gmail.com>"]
homepage = "https://github.com/tim83/sshtools"
repository = "https://github.com/tim83/sshtools"
include = [
    'sshtools/config/**',
]

[tool.poetry.scripts]
getip = "sshtools.getip:run"
smount = "sshtools.smount:run"
sshin = "sshtools.sshin:run"
ssync = "sshtools.ssync:run"
wake-up = "sshtools.wakeup:run"
ssh-forget = "sshtools.forget:run"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
argparse = "^1.4.0"
configparser = "^5.0.2"
psutil = "^5.8.0"
timtools = { git = "https://github.com/tim83/timtools" }
ipaddress = "^1.0.23"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-bugbear = "^21.9.2"
pep8-naming = "^0.12.1"
black = "^21.10b0"
isort = "^5.10.1"
safety = "^1.10.3"
bandit = "^1.7.1"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
python-semantic-release = "^7.25.0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.pylint.messages_control]
disable = "cyclic-import"
