[tool.poetry]
name = "sshtools"
version = "4.30.1"
description = ""
authors = ["Tim Mees <tim.mees83@gmail.com>"]
homepage = "https://github.com/tim83/sshtools"
repository = "https://github.com/tim83/sshtools"
include = [
    'sshtools/config/**',
]

[tool.poetry.scripts]
getip = "sshtools.getip:run"
smount = "sshtools.smount:run"
sshin = "sshtools.sshin:run"
ssync = "sshtools.ssync:run"
wake-up = "sshtools.wakeup:run"
ssh-forget = "sshtools.forget:run"
ssinfo = "sshtools.ssinfo:run"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
argparse = ">=1.4.0"
configparser = ">=5.0.2"
psutil = ">=5.8.0"
timtools = { git = "https://github.com/tim83/timtools" }
ipaddress = ">=1.0.23"
tabulate = ">=0.8.9"
cachetools = ">=5.2.0"
toml = ">=0.10.2"

[tool.poetry.dev-dependencies]
black = ">=21.10b0"
pre-commit = ">=2.15.0"
pytest = ">=7.1.1"
darglint = ">=1.8.1"
python-semantic-release = ">=7.25.0"
pylint = ">=2.12.2"
ruff = ">=0.0.256"
coverage = ">=7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "master"
upload_to_repository = false
repository_url = "https://git.mees.vip/api/packages/tim/pypi"
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.ruff]
line-length = 88
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Flake8-bugbear
    "B"
]
# Never enforce `E501` (line length violations).
ignore = ["E501"]

[tool.pylint.messages_control]
disable = "cyclic-import,line-too-long"
